# source_location

./: .gitignore  CMakeLists.txt  NEWS.rst  README.rst  resolve.json  waf  wscript
.github/workflows/: cpp-external.yml
example/: main.cpp
